# api_key_sync

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  tab_export.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
src/api_key_sync/: __init__.py  cli.py  config.py  models.py  sync.py
src/api_key_sync/backends/: __init__.py  chezmoi.py  keychain.py  onepassword.py
tests/: test_chezmoi.py  test_config.py  test_sync.py
